v1.1.1 Angular CLI updates - changed PerfectScrollbar library from 7.0.0 to 0.6.13 (7.0.0 is adding an infinite scroll) from js/core files - added active class back, it was not visible after the migration from Angular 2 - fixed off canvas menu for login/register/lock pages - fix error with swal on calendar.components.ts

--- a/src/assets/sass/material-dashboard/_responsive.scss
+++ b/src/assets/sass/material-dashboard/_responsive.scss
@@ -35,10 +35,6 @@
         }
     }
 
-    body > .navbar-collapse.collapse{
-        display: none !important;
-    }
-
     .sidebar{
         .navbar-form{
             display: none !important;
@@ -190,7 +186,7 @@
     .main-panel{
         width: 100%;
     }
-    .navbar-transparent{
+    .wrapper-full-page .navbar.navbar-transparent{
         padding-top: 15px;
         background-color: rgba(0, 0, 0, 0.45);
     }
@@ -198,24 +194,24 @@
          position: relative;
          min-height: 100vh;
     }
-    .main-panel,
-    .wrapper-full-page,
-    .navbar .container{
+    .wrapper .main-panel,
+    .sidebar-pages .main-panel,
+    .off-canvas-menu .wrapper-full-page,
+    .sidebar-pages .navbar .container{
        @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
        left: 0;
     }
 
-    .navbar .navbar-collapse.collapse,
-    .navbar .navbar-collapse.collapse.in,
-    .navbar .navbar-collapse.collapsing{
+    .navbar .container{
+        @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+    }
+
+    .sidebar-pages .navbar .navbar-collapse.collapse,
+    .sidebar-pages .navbar .navbar-collapse.collapse.in,
+    .sidebar-pages .navbar .navbar-collapse.collapsing{
         display: none !important;
     }
 
-    .navbar-nav > li{
-        float: none;
-        position: relative;
-        display: block;
-    }
 
     .sidebar,
     .off-canvas-sidebar{
@@ -298,16 +294,24 @@
         }
     }
 
-    .nav-open .navbar-collapse{
-        @include transform-translate-x(0px);
-    }
-
     .nav-open{
-        .main-panel,
-        .wrapper-full-page,
-        .navbar .container{
+        .sidebar-pages .main-panel,
+        .sidebar-pages .navbar .container,
+        .wrapper .main-panel{
             left: 0;
             @include transform-translate-x(-260px);
+        }
+
+        .navbar .container{
+            @include transform-translate-x(0px);
+        }
+    }
+
+
+
+    .nav-open.off-canvas-menu{
+        .navbar .container{
+            @include transform-translate-x(0px);
         }
     }
 
@@ -432,28 +436,28 @@
     }
 
     [class*="navbar-"] .navbar-nav {
-        & > li > a,
-        > li > a:hover,
-        > li > a:focus,
-        .active > a,
-        .active > a:hover,
-        .active > a:focus,
-        .open .dropdown-menu > li > a,
-        .open .dropdown-menu > li > a:hover,
-        .open .dropdown-menu > li > a:focus,
-        .navbar-nav .open .dropdown-menu > li > a:active {
-            color: white;
-        }
-
-        & > li > a,
-        > li > a:hover,
-        > li > a:focus,
-        .open .dropdown-menu > li > a,
-        .open .dropdown-menu > li > a:hover,
-        .open .dropdown-menu > li > a:focus{
-            opacity: .7;
-            background: transparent;
-        }
+        // & > li > a,
+        // > li > a:hover,
+        // > li > a:focus,
+        // .active > a,
+        // .active > a:hover,
+        // .active > a:focus,
+        // .open .dropdown-menu > li > a,
+        // .open .dropdown-menu > li > a:hover,
+        // .open .dropdown-menu > li > a:focus,
+        // .navbar-nav .open .dropdown-menu > li > a:active {
+        //     color: white;
+        // }
+        //
+        // & > li > a,
+        // > li > a:hover,
+        // > li > a:focus,
+        // .open .dropdown-menu > li > a,
+        // .open .dropdown-menu > li > a:hover,
+        // .open .dropdown-menu > li > a:focus{
+        //     opacity: .7;
+        //     background: transparent;
+        // }
 
         &.navbar-nav .open .dropdown-menu > li > a:active {
             opacity: 1;
@@ -523,23 +527,38 @@
         width: 100%;
     }
 
-    .navbar-collapse.collapse{
+    .sidebar-pages .navbar-header .collapse,
+    .sidebar-pages .navbar-toggle {
+        display:block !important;
+    }
+
+    .off-canvas-menu .navbar-header .collapse,
+    .off-canvas-menu .navbar-toggle {
+        display:none !important;
+    }
+
+    .sidebar-pages .navbar-collapse.collapse{
         height: 100% !important;
     }
     .navbar-collapse.collapse.in {
         display: block;
     }
-    .navbar-header .collapse, .navbar-toggle {
-        display:block !important;
-    }
-    .navbar-header {
+    .sidebar-pages .navbar-header {
         float:none;
+    }
+
+    .off-canvas-menu .navbar-header{
+        float: left;
     }
     .navbar-collapse{
         .nav p{
             font-size: $font-size-base;
             margin: 0;
         }
+    }
+
+    .navbar-transparent{
+        background: rgba(0,0,0,.6);
     }
 }
 
@@ -548,6 +567,11 @@
 @media (min-width: 768px){
     .navbar> .container-fluid .navbar-brand{
         margin-left: 0;
+    }
+
+    .navbar-header .collapse,
+    .navbar-toggle{
+        display:none !important;
     }
 }
 
@@ -558,6 +582,85 @@
             padding-left: 0;
             padding-right: 0;
         }
+    }
+
+    .off-canvas-menu{
+        .nav > li > a,
+        .nav > li > a:hover{
+            color: $white;
+        }
+
+        .nav > li > a i,
+        .nav > li > a i:hover{
+            color: #a9afbb;
+        }
+
+
+        .navbar-collapse{
+            position: fixed;
+            display: block;
+            top: -15px;
+            height: 100vh;
+            width: 260px;
+            right: 0;
+            z-index: 1032;
+            visibility: visible;
+            background-color: #999;
+            overflow-y: visible;
+            border-top: none;
+            margin: 0;
+            text-align: left;
+
+            max-height: none !important;
+
+            @include transform-translate-x(260px);
+            @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+
+            ul {
+                position: relative;
+                z-index: 3;
+                overflow-y: auto;
+                height: 100%;
+            }
+
+            &::after{
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                position: absolute;
+                background-color: #282828;
+                display: block;
+                content: "";
+                z-index: 1;
+            }
+            &.has-image::after{
+
+            }
+        }
+
+        .navbar-header{
+            float:none;
+        }
+
+        .navbar-header .collapse, .navbar-toggle {
+            display:block !important;
+        }
+    }
+
+    .nav-open.off-canvas-menu{
+        .wrapper-full-page,
+        .navbar .container{
+            left: 0;
+            @include transform-translate-x(-260px);
+        }
+    }
+
+
+    .navbar-nav > li{
+        float: none;
+        position: relative;
+        display: block;
     }
 
     .fileinput{
